<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">JinjerKeihi</string>
    <string name="copyright">Copyright 2015 – 2018 Michael Farrell</string>
    <string name="license">Licenses</string>
    <string name="title_activity_license">Open Source Licenses</string>
    <string name="directions">カードをタップしてください。</string>
    <string name="reading_card">カードを読み込み中…</string>
    <string name="dont_move">カードを移動しないでください</string>
    <string name="advanced_info">高度情報</string>
    <string name="delete_card">カードを削除する</string>
    <string name="unknown_card">未知のカード</string>
    <string name="hw_detail">製造情報</string>
    <string name="data">生データ</string>
    <string name="copy_xml">コピー</string>
    <string name="share_xml">共有</string>
    <string name="save_xml">ファイルに保存</string>
    <string name="trips">旅行</string>
    <string name="balance">残高</string>
    <string name="refills">リフィル</string>
    <string name="no_trip_data">履歴は見つかりませんでした。このカードを使用しましたか?</string>
    <string name="import_xml">インポート</string>
    <string name="import_clipboard">クリップボードから貼り付け</string>
    <string name="import_file">ファイルからインポート</string>
    <string name="export">エクスポート</string>
    <string name="export_all">すべてエクスポートする</string>
    <string name="about">について</string>
    <string name="preferences">環境設定</string>
    <string name="accessibility">アクセシビリティ</string>
    <string name="speak_balance">残高を大きく読み上げ</string>
    <string name="speak_balance_summary">カードをスキャンするとき、残高を自動的に読み上げます。これは、他の音声合成のソフトウェアが利用できない場合でも機能します。</string>
    <string name="balance_speech">残高 <xliff:g example="$13.37" id="balance">%s</xliff:g></string>
    <string name="loading">ロード中…</string>
    <string name="scanned_at_format" formatted="false">%2$sに%1$sにスキャンされました</string>
    <string name="supported_cards">利用できるカード</string>
    <string name="pass_or_transfer">パス／乗り換え</string>
    <string name="transaction_sequence">順序</string>
    <string name="felica_terminal_fare_adjustment">精算機</string>
    <string name="felica_terminal_portable">携帯型端末</string>
    <string name="felica_terminal_vehicle">等車載端末</string>
    <string name="felica_terminal_ticket">券売機</string>
    <string name="felica_terminal_deposit_quick_charge">入金機(クイックチャージ機)</string>
    <string name="felica_terminal_tvm_tokyo_monorail">券売機(東京モノレール)</string>
    <string name="felica_terminal_tvm_etc">券売機、など。</string>
    <string name="felica_terminal_turnstile">改札機</string>
    <string name="felica_terminal_ticket_validator">簡易改札機</string>
    <string name="felica_terminal_ticket_booth">窓口端末</string>
    <string name="felica_terminal_ticket_office_green">窓口端末(みどりの窓口)</string>
    <string name="felica_terminal_ticket_gate_terminal">改札端末</string>
    <string name="felica_terminal_mobile_phone">携帯電話</string>
    <string name="felica_terminal_connection_adjustment">乗継清算機</string>
    <string name="felica_terminal_transfer_adjustment">連絡改札機 Machine</string>
    <string name="felica_terminal_simple_deposit">簡易入金機</string>
    <string name="felica_terminal_pos">物販端末</string>
    <string name="felica_terminal_vending">自販機</string>
    <string name="felica_process_fare_exit_gate">出口改札</string>
    <string name="felica_process_charge">チャージ</string>
    <string name="felica_process_purchase_magnetic">券購(磁気券購入)</string>
    <string name="felica_process_fare_adjustment">精算</string>
    <string name="felica_process_admission_payment">精算(入場精算)</string>
    <string name="felica_process_issue_new">新規(新規発行)</string>
    <string name="felica_process_booth_deduction">控除(窓口控除)</string>
    <string name="felica_process_bus_pitapa">バス(PiTaPa系)</string>
    <string name="felica_process_bus_iruca">バス(IruCa系)</string>
    <string name="felica_process_reissue">再発(再発行処理)</string>
    <string name="felica_process_payment_shinkansen">支払(新幹線利用)</string>
    <string name="felica_process_entry_a_autocharge">入A(入場時オートチャージ)</string>
    <string name="felica_process_exit_a_autocharge">出A(出場時オートチャージ)</string>
    <string name="felica_process_deposit_bus">入金(バスチャージ)</string>
    <string name="felica_process_purchase_special_ticket">券購 (バス路面電車企画券購入)</string>
    <string name="felica_process_merchandise_purchase">物販</string>
    <string name="felica_process_bonus_charge">特典(特典チャージ)</string>
    <string name="felica_process_register_deposit">入金(レジ入金)</string>
    <string name="felica_process_merchandise_cancel">物販取消</string>
    <string name="felica_process_merchandise_admission">入物 (入場物販)</string>
    <string name="felica_process_merchandise_purchase_cash">物現 (現金併用物販)</string>
    <string name="felica_process_merchandise_admission_cash">入物 (入場現金併用物販)</string>
    <string name="felica_process_payment_thirdparty">精算 (他社精算)</string>
    <string name="felica_process_admission_thirdparty">精算 (他社入場精算)</string>
    <string name="unknown_card_description">読み込んだカードは Metrodroid で対応していません。データだけが表示されます。</string>
    <string name="report_error_privacy_title">個人情報の取扱いについて</string>
    <string name="report_error_privacy_message">このカードの全てのデータがエラーレポートに含まれます。</string>
    <string name="scanned_cards">履歴</string>
    <string name="no_scanned_cards">カードがまだスキャンされていません。</string>
    <string name="location_tokyo">東京</string>
    <string name="location_kansai">関西</string>
    <string name="locked_card">ロックされたカード</string>
    <string name="fully_locked_desc">"このカードは鍵なしに自由に読み取りできる部分はありません。有効な鍵がインストールされていません。
\n
\n
\n Metrodroid によってサポートされている場合、鍵をインストールすると、カードを動作させることができます。詳細についてはドキュメントを参照してください。
\n
\n お使いのカードが Metrodroid によってサポートされていない場合、鍵が解析されない限り、サポートされる可能性はありません。
\n
\n
\n 発行されたカードで、一部のレベルのオープンデータアクセスを可能にするために、市営交通機関に問い合わせてください。公共交通スマートカードのデータに、安全に限定された読み取りアクセスをすることは可能です。 "</string>
    <string name="fully_locked_title">完全にロックされたカードです。</string>
    <string name="block_title_format" formatted="false">ブロック: %s</string>
    <string name="sector_title_format" formatted="false">セクター: 0x%s</string>
    <string name="unauthorized_sector_title_format" formatted="false">セクター: 0x%s (未承認)</string>
    <string name="invalid_sector_title_format" formatted="false">セクター: 0x%1$s (無効: %2$s)</string>
    <string name="subscriptions">サブスクリプション</string>
    <string name="info">情報</string>
    <string name="valid_format" formatted="false">有効な %1$s %2$s へ</string>
    <string name="unknown_format" formatted="false">不明 (%s)</string>
    <string name="keys_required">このカードを読み取るために、暗号化鍵が必要です。</string>
    <string name="load_keys">鍵をロード</string>
    <string name="card_keys_not_supported">Metrodroid は、この種類のカードの鍵をサポートしません。</string>
    <string name="add_key">鍵を追加</string>
    <string name="error">エラー</string>
    <string name="keys">鍵</string>
    <string name="delete">削除</string>
    <string name="add_key_directions">鍵のバイナリダンプを .farebotkeys 拡張子のファイルで保存して、添付ファイルとしてメールで送信し、その後このデバイスで開きます。</string>
    <string name="no_keys">鍵がありません。</string>
    <string name="fare_cancelled_format" formatted="false">%s (キャンセル)</string>
    <string name="general">全般</string>
    <string name="launch_from_background">バックグラウンドで起動</string>
    <string name="error_report_sent">エラー報告を送信しました。</string>
    <string name="checksum">チェックサム</string>
    <string name="last_transaction">最後のトランザクション</string>
    <string name="date">日付</string>
    <string name="time">時刻</string>
    <string name="vehicle_type">乗り物の種類</string>
    <string name="transaction_type">トランザクションの種類</string>
    <string name="card_epoch">カード エポック</string>
    <string name="card_not_supported_on_device">このカードは、お使いのデバイスでサポートされていません。</string>
    <string name="card_note_cepas">すべてのデバイスと互換性がありません。</string>
    <string name="need_stations">一部の駅の名前が不明です。</string>
    <string name="need_stations_submit">報告</string>
    <string name="card_preview_reader">ベータ版のカードリーダーです。</string>
    <string name="visit_website">ウェブサイトを訪問</string>
    <string name="title_activity_about">Metrodroid について</string>
    <string name="card_type">カードの種類</string>
    <string name="select_file">ファイルを選択</string>
    <string name="copied_to_clipboard">クリップボードにコピーしました</string>
    <string name="saved_xml">USB ストレージに Metrodroid Export.xml を書き込みました。</string>
    <plurals name="cards_imported">
        <item quantity="one"><xliff:g example="1" id="count">%d</xliff:g>カードをインポートしました!</item>
        <item quantity="other" />
    </plurals>
    <string name="location_seattle">米国 ワシントン州 シアトル</string>
    <string name="location_san_francisco">米国 カリフォルニア州 サンフランシスコ</string>
    <string name="location_singapore">シンガポール</string>
    <string name="location_the_netherlands">オランダ</string>
    <string name="location_sao_paulo">ブラジル サンパウロ</string>
    <string name="location_helsinki_finland">フィンランド ヘルシンキ</string>
    <string name="location_sydney_australia">オーストラリア シドニー</string>
    <string name="location_brisbane_seq_australia">オーストラリア クイーンズランド州 ブリスベン &amp; SE</string>
    <string name="location_victoria_australia">オーストラリア ビクトリア州</string>
    <string name="felica_process_booth_exit">駅長ブース出口</string>
    <string name="hsl_pass_is_valid">有効なシーズン チケット</string>
    <string name="hsl_1zone_ticket">内部チケット</string>
    <string name="hsl_2zone_ticket">地域チケット</string>
    <string name="hsl_balance_refill">残高チャージ</string>
    <string name="hsl_balance_ticket">バリュー チケット</string>
    <string name="hsl_value_ticket_is_valid">有効なバリュー チケット</string>
    <string name="hsl_pass_ticket">シーズン チケット</string>
    <string name="hsl_season_ticket_starts">シーズン チケット開始</string>
    <string name="hsl_season_ticket_ends">シーズン チケット終了</string>
    <string name="hsl_season_ticket_bought_on">シーズン チケット購入</string>
    <string name="hsl_previous_season_ticket">前のシーズン チケットは</string>
    <string name="hsl_season_ticket_price_was">シーズン チケットの値段は</string>
    <string name="hsl_you_last_used_this_ticket">最後にこのチケットを使用したのは</string>
    <string name="hsl_person_format" formatted="false">%s 人</string>
    <string name="hsl_mins_format" formatted="false">%s 分</string>
    <string name="hsl_value_ticket">バリュー チケット</string>
    <string name="hsl_value_ticket_bought_on">チケット購入</string>
    <string name="hsl_value_ticket_expires_on">チケットの有効期限</string>
    <string name="hsl_value_ticket_last_transfer">最後の乗換</string>
    <string name="hsl_value_ticket_last_sign">最後の署名</string>
    <string name="hsl_value_ticket_price">バリュー チケットの値段</string>
    <string name="hsl_value_ticket_disco_group">割引グループ</string>
    <string name="hsl_value_ticket_pax">グループ サイズ</string>
    <string name="hsl_value_ticket_duration">チケット有効期間</string>
    <string name="hsl_value_ticket_vehicle_number">乗り物番号</string>
    <string name="hsl_value_ticket_vehicle_type">乗り物の種類</string>
    <string name="hsl_value_ticket_line_number">路線番号</string>
    <string name="hsl_season_ticket">シーズン チケット</string>
    <string name="opal_automatic_top_up">自動チャージ</string>
    <string name="opal_weekly_trips">毎週の旅行</string>
    <string name="opal_vehicle_bus">バス</string>
    <string name="opal_vehicle_ferry_lr">フェリーや路面電車</string>
    <string name="opal_vehicle_rail">鉄道</string>
    <string name="opal_action_none">なし (新規、未使用カード)</string>
    <string name="opal_action_new_journey">新しい旅</string>
    <string name="opal_action_transfer_same_mode">乗換 (同じ形態から)</string>
    <string name="opal_action_transfer_diff_mode">乗換 (異なる形態から)</string>
    <string name="opal_action_manly_new_journey">新しい旅 (マンリー フェリー)</string>
    <string name="opal_action_manly_transfer_same_mode">乗換 (他のフェリーからマンリー フェリー)</string>
    <string name="opal_action_manly_transfer_diff_mode">乗換 (他の形態からマンリー フェリーへ)</string>
    <string name="opal_action_journey_completed_distance">旅を完了しました (距離運賃)</string>
    <string name="opal_action_journey_completed_flat_rate">旅を完了しました (定額制運賃)</string>
    <string name="opal_action_journey_completed_auto_off">旅を完了しました (取り出しに失敗)</string>
    <string name="tab_card">ご利用中の端末にICカードを近ずけてください。</string>
    <string name="cancel">キャンセール</string>
    <string name="message_error">ICカードの読み込みが失敗しました。</string>
    <string name="history">履歴</string>
    <string name="send">送信</string>
    <string name="try_again">再試行する</string>
</resources>